examples/passing/Module.purs
module Main where

import Control.Monad.Eff.Console (log)
import M1
import M2

main = log "Done"
